fixing xrefs and user explanation

--- a/articles/defender-for-iot/organizations/TOC.yml
+++ b/articles/defender-for-iot/organizations/TOC.yml
@@ -280,9 +280,9 @@
     - name: Overview
       href: cli/cli-overview.md
     - name: Manage individual OT network sensors
-      href: cli-ot-sensor.md
+      href: cli/cli-ot-sensor.md
     - name: Configure individual OT network sensors
-      href: ot-sensor-configuration.md
+      href: cli/ot-sensor-configuration.md
     - name: Manage an on-premises management console
       href: cli/cli-management.md
     - name: Configure an on-premises management console
