--- a/articles/healthcare-apis/iot/toc.yml
+++ b/articles/healthcare-apis/iot/toc.yml
@@ -15,29 +15,16 @@ items:
     expanded: false
     items:
     - name: Deployment methods   
-      expanded: false
+      expanded: true
       items:
-      - name: Choose a method
+      - name: Choose a deployment method
         href: deploy-iot-connector-in-azure.md
       - name: QuickStart template
         href: deploy-02-new-button.md
       - name: Azure PowerShell & CLI
         href: deploy-08-new-ps-cli.md
       - name: Manual deployment
-        expanded: false
-        items:
-        - name: Deploy manually
-          href: deploy-03-new-manual.md
-        - name: Prerequisites
-          href: deploy-04-new-prereq.md
-        - name: Configuration
-          href: deploy-05-new-config.md
-        - name: Manual Deployment
-          href: deploy-06-new-deploy.md
-        - name: Post-deployment
-          href: deploy-07-new-post-deploy.md
-        - name: Azure PowerShell & CLI
-          href: deploy-08-new-ps-cli.md
+        href: deploy-03-new-manual.md
 - name: Tutorials
   expanded: true
   items:
