--- a/articles/active-directory/authentication/certificate-based-authentication-faq.yml
+++ b/articles/active-directory/authentication/certificate-based-authentication-faq.yml
@@ -78,7 +78,7 @@ sections:
       - question: |
           Is there a limit for CRL size?
         answer: |
-          Today, as part of the GA, we have increased the CRL size limit as follows. 
+          CRL size limits are as follows. 
 
            - Interactive sign in download limit: 20MB (Azure Global includes GCC), 45 for (Azure US government, includes GCC High, Dept. of Defense)
            - Service download limit: 45MB (Azure Global includes GCC), 150MB for (Azure US government, includes GCC High, Dept. of Defense)
