--- a/articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json
+++ b/articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json
@@ -105,6 +105,11 @@
             "source_path_from_root": "/articles/applied-ai-services/form-recognizer/how-to-guides/try-v2-1-sdk-rest-api.md",
             "redirect_url": "/azure/applied-ai-services/form-recognizer/how-to-guides/v2-1-sdk-rest-api.md",
             "redirect_document_id": false
+          },
+          {
+            "source_path_from_root": "/articles/applied-ai-services/form-recognizer/how-to-guides/v3-0-sdk-rest-api.md",
+            "redirect_url": "/azure/applied-ai-services/form-recognizer/how-to-guides/v3-0-sdk-rest-api.md",
+            "redirect_document_id": false
           }
     ]
 }
