--- a/articles/cosmos-db/nosql/TOC.yml
+++ b/articles/cosmos-db/nosql/TOC.yml
@@ -26,7 +26,7 @@
       href: quickstart-template-json.md
     - name: Create resources - Terraform template
       displayName: ARM, Resource Manager, Template, Terraform
-      href: quick-create-terraform.md
+      href: quickstart-terraform.md
 - name: Tutorials
   items:
     - name: Create and manage data
@@ -131,7 +131,7 @@
         - name: Bicep syntax templates
           href: bicep-samples.md
         - name: Terraform syntax templates
-          href: terraform-samples.md
+          href: samples-terraform.md
     - name: Azure Resource Graph queries
       href: ../resource-graph-samples.md
 - name: Concepts
