--- a/articles/machine-learning/v1/toc.yml
+++ b/articles/machine-learning/v1/toc.yml
@@ -236,6 +236,8 @@
         href: how-to-train-keras.md
       - name: PyTorch
         href: how-to-train-pytorch.md
+      - name: Train with custom Docker image
+        href: ../how-to-train-with-custom-image.md
       - name: Migrate from Estimators to ScriptRunConfig
         href: how-to-migrate-from-estimators-to-scriptrunconfig.md
       - name: Use Key Vault when training
@@ -271,6 +273,8 @@
       - name: Featurization in automated ML (Python)
         displayName: automl, feature engineering, feature importance, BERT
         href: ../how-to-configure-auto-features.md
+      - name: Generate AutoML training code
+        href: ../how-to-generate-automl-training-code.md
       - name: Local inference using ONNX
         displayName: SDK, automl
         href: how-to-inference-onnx-automl-image-models-v1.md
@@ -282,6 +286,9 @@
     - name: Log & view metrics
       href: how-to-log-view-metrics.md
     - name: Visualize runs with TensorBoard
+    - name: Log metrics with designer
+      displayName: designer, logging
+      href: ../how-to-track-designer-experiments.md
       displayName: log, monitor, metrics
       href: ../how-to-monitor-tensorboard.md
     - name: Interpret ML models
@@ -426,3 +433,6 @@
       href: ../migrate-rebuild-integrate-with-client-app.md
     - name: Rebuild Execute R Script components
       href: ../migrate-execute-r-script.md
+  - name: What happened to Workbench
+    displayName: desktop, ui, Workbench, upgrade, update, transfer
+    href: ../overview-what-happened-to-workbench.md
