--- a/articles/azure-percept/index.yml
+++ b/articles/azure-percept/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Percept documentation
-summary: Retirement of Azure Percept DK: The [Azure Percept]( https://azure.microsoft.com/products/azure-percept/) public preview will be evolving to support new edge device platforms and developer experiences.  As part of this evolution the Azure Percept DK and Audio Accessory and associated supporting Azure services for the Percept DK will be retired March 30th, 2023. The Azure Percept DK and Audio Accessory will no longer be supported by any Azure services including Azure Percept Studio, OS updates, containers updates, view web stream, and Custom Vision integration.  Microsoft will no longer provide customer success support and any associated supporting services. 
+summary: Retirement of Azure Percept DK: The [Azure Percept](https://azure.microsoft.com/products/azure-percept/) public preview will be evolving to support new edge device platforms and developer experiences.  As part of this evolution the Azure Percept DK and Audio Accessory and associated supporting Azure services for the Percept DK will be retired March 30th, 2023. The Azure Percept DK and Audio Accessory will no longer be supported by any Azure services including Azure Percept Studio, OS updates, containers updates, view web stream, and Custom Vision integration.  Microsoft will no longer provide customer success support and any associated supporting services. 
 
 metadata:
   title: Azure Percept documentation
@@ -8,9 +8,9 @@ metadata:
   services: azure-percept
   ms.service: azure-percept
   ms.topic: landing-page 
-  author: nkhuyent
-  ms.author: ngt
-  ms.date: 03/25/2021 
+  author: yvonne-deq
+  ms.author: v-mdequadros
+  ms.date: 10/03/2022 
 
 landingContent:
   - title: What is Azure Percept?
