Cost Management Ignite 2022 integration branch fixes

--- a/articles/cost-management-billing/savings-plan/toc.yml
+++ b/articles/cost-management-billing/savings-plan/toc.yml
@@ -23,7 +23,7 @@
     href: buy-savings-plan.md
   - name: Trade a reservation for a savings plan
     href: reservation-trade-in.md
-  - name: Permissions, View and Manage
+  - name: Permissions, view and manage
     items:
     - name: Permissions to view and manage
       href: permission-view-manage.md
