--- a/articles/azure-percept/index.yml
+++ b/articles/azure-percept/index.yml
@@ -1,6 +1,6 @@
 ### YamlMime:Landing
 title: Azure Percept documentation
-summary: Azure Percept is an end-to-end solution for building and deploying perception-based AI at the edge. # < 160 chars
+summary: The Azure Percept DK will be retired March 30th, 2023 and the Azure Percept public preview will be evolving to support new edge device platforms and developer experiences. The Azure Percept DK and Audio Accessory will no longer be supported by any Azure services including Azure Percept Studio, OS updates, containers updates, view web stream, and Custom Vision integration.  Microsoft will no longer provide customer success support and any associated supporting services. # < 500 chars
 
 metadata:
   title: Azure Percept documentation
