--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -339,6 +339,12 @@
       "branch_mapping": {}
     },
     {
+      "path_to_root": "media-services-video-indexer",
+      "url": "https://github.com/Azure-Samples/media-services-video-indexer",
+      "branch": "master",
+      "branch_mapping": {}
+    },
+    {
       "path_to_root": "remote-monitoring-webui",
       "url": "https://github.com/Azure/pcs-remote-monitoring-webui.git",
       "branch": "master",
