--- a/articles/network-watcher/frequently-asked-questions.yml
+++ b/articles/network-watcher/frequently-asked-questions.yml
@@ -32,7 +32,7 @@ sections:
           Network Watcher provides three major sets of capabilities
           * Monitoring
             * [Topology view](./view-network-topology.md) shows you the resources in your virtual network and the relationships between them.
-            * [Connection Monitor](./connection-monitor.md) allows you to monitor connectivity and latency between a VM and another network resource.
+            * [Connection Monitor](./connection-monitor-overview.md) allows you to monitor connectivity and latency between a VM and another network resource.
             * [Network performance monitor](../azure-monitor/insights/network-performance-monitor.md) allows you to monitor connectivity and latencies across hybrid network architectures, Expressroute circuits, and service/application endpoints.  
           * Diagnostics
             * [IP Flow Verify](./network-watcher-ip-flow-verify-overview.md) allows you to detect traffic filtering issues at a VM level.
