--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -1281,7 +1281,7 @@ items:
     href: industry-sap-connectors.md
   - name: SAP templates
     href: industry-sap-templates.md
-  - name: SAP change data capture (CDC) capabilities (preview)
+  - name: SAP change data capture (CDC) capabilities
     items:
     - name: Overview and architecture
       href: sap-change-data-capture-introduction-architecture.md
@@ -1292,8 +1292,8 @@ items:
       href: sap-change-data-capture-shir-preparation.md
     - name: Set up a linked service and source dataset
       href: sap-change-data-capture-prepare-linked-service-source-dataset.md
-    - name: Debug the Data Factory copy activity
+    - name: Debug issues with the SAP CDC connector
       href: sap-change-data-capture-debug-shir-logs.md
-    - name: Manage your solution
+    - name: Manage the SAP CDC process
       href: sap-change-data-capture-management.md
     displayName: SAP, change data capture, CDC
