--- a/articles/confidential-computing/confidential-vm-faq-amd.yml
+++ b/articles/confidential-computing/confidential-vm-faq-amd.yml
@@ -57,6 +57,11 @@ sections:
         answer: |
           Currently OS disks for confidential VMs can be encrypted and secured. 
           For additional security, you can enable guest level encryption (such as BitLocker or dm-crypt) for all data drives.
+          If you are using an Azure confidential VM and attaching extra disks, in order to maximize its security benefits follow the below recommendation:
+          Encrypt your data disks (any disks containing data base files, log files, or backup files) with [BitLocker](https://learn.microsoft.com/windows/security/information-protection/bitlocker/bitlocker-overview) and enable automatic unlocking – see [manage-bde autounlock](https://learn.microsoft.com/windows-server/administration/windows-commands/manage-bde-autounlock) or, [Enable-BitLockerAutoUnlock](https://learn.microsoft.com/powershell/module/bitlocker/enable-bitlockerautounlock?view=windowsserver2022-ps). Automatic unlocking ensures the encryption keys are stored on the OS disk. In conjunction with confidential OS disk encryption, this will protect the data at rest on the VM disks from unauthorized host access. It is recommended to store BitLocker recovery keys in a secure location (for example, in a [managed HSM in Azure Key Vault](/articles/key-vault/managed-hsm/overview.md)), to make it easier to migrate the disk to another VM in the future.
+          
+          If you have a requirement to move the attached data disks to another virtual machine, you may want to save the bitlocker keys into a secure key management store like [M-HSM](/articles/key-vault/managed-hsm/overview.md) & retrieve it manually or via APIs to re-attach the data disk on to a new virtual machine. Further to that please enable auto-uplock on the new VM/CVM as explained above.
+          Note: The above option only applies to Windows based Confidential virtual machines. The team is still working on similar options using dm-crypt for Linux based virtual machines
         
       - question: |
           Does memory written to the Windows swap file (pagefile.sys) get protected by the TEE?
