--- a/articles/sentinel/TOC.yml
+++ b/articles/sentinel/TOC.yml
@@ -282,6 +282,10 @@
       href: indicators-bulk-file-import.md
     - name: Work with threat indicators
       href: work-with-threat-indicators.md
+    - name: Use matching analytics to detect threats
+      href: use-matching-analytics-to-detect-threats.md
+    - name: Use threat indicators in analytics rules
+      href: use-threat-indicators-in-analytics-rules.md
   - name: Monitor and visualize data
     items:
     - name: Visualize collected data
