--- a/articles/active-directory/reports-monitoring/reports-faq.yml
+++ b/articles/active-directory/reports-monitoring/reports-faq.yml
@@ -3,7 +3,7 @@ metadata:
   title: Azure Active Directory reports FAQ | Microsoft Docs
   description: Frequently asked questions around Azure Active Directory reports.
   services: active-directory
-  author: shlpisey3
+  author: shlipsey3
   manager: amycolannino
   ms.service: active-directory
   ms.workload: identity
