--- a/articles/azure-arc/data/toc.yml
+++ b/articles/azure-arc/data/toc.yml
@@ -216,6 +216,8 @@ items:
               href: managed-instance-high-availability.md
             - name: Disaster recovery
               href: managed-instance-disaster-recovery.md
+            - name: Reprovision replica
+              href: reprovision-replica.md
 - name: Azure Arc-enabled PostgreSQL (preview) 
   items:
     - name: Overview
