--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -540,15 +540,15 @@ items:
           href: ../common/storage-use-azcopy-troubleshoot.md?toc=/azure/storage/blobs/toc.json
       - name: BlobFuse
         items:
-        - name: What is BlobFuse2?
+        - name: What is BlobFuse2 Preview?
           href: blobfuse2-what-is.md
-        - name: Deploy BlobFuse2 on Linux
+        - name: Deploy BlobFuse2 Preview on Linux
           href: blobfuse2-how-to-deploy.md
         - name: Deploy BlobFuse v1 on Linux
           href: storage-how-to-mount-container-linux.md
         - name: Health Monitor
           href: blobfuse2-health-monitor.md
-        - name: Troubleshooting
+        - name: Troubleshoot BlobFuse2 Preview
           href: blobfuse2-troubleshooting.md
       - name: Azure Data Factory
         href: ../../data-factory/connector-azure-blob-storage.md?toc=/azure/storage/blobs/toc.json
