Adding ADC Upgrade process.

--- a/articles/azure-arc/data/toc.yml
+++ b/articles/azure-arc/data/toc.yml
@@ -196,12 +196,16 @@ items:
                   href: deploy-active-directory-connector-cli.md
                 - name: Deploy AD connector - portal
                   href: deploy-active-directory-connector-portal.md
-            - name: Deploy SQL Managed Instance
-              href: deploy-active-directory-sql-managed-instance.md
-            - name: Deploy SQL Managed Instance - CLI
-              href: deploy-active-directory-sql-managed-instance-cli.md
-            - name: Connect SQL Managed Instance
-              href: connect-active-directory-sql-managed-instance.md
+            - name: Deploy & connect sql managed instance
+              items:
+                - name: Deploy SQL Managed Instance
+                  href: deploy-active-directory-sql-managed-instance.md
+                - name: Deploy SQL Managed Instance - CLI
+                  href: deploy-active-directory-sql-managed-instance-cli.md
+                - name: Connect SQL Managed Instance
+                  href: connect-active-directory-sql-managed-instance.md
+            - name: Upgrade connector
+              href: upgrade-active-directory-connector.md
         - name: Transparent data encryption
           items:
             - name: Turn on transparent data encryption manually
