--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -456,7 +456,7 @@
       href: how-to-managed-identity-managed-cluster-virtual-machine-scale-sets.md
     - name: Use managed identity with an application
       href: how-to-managed-cluster-managed-identity-service-fabric-app-code.md
-    - name: Deploy Custom Image
+    - name: Deploy custom image
       href: how-to-deploy-custom-image.md
   - name: Set up your development environment
     items:
