--- a/articles/private-5g-core/index.yml
+++ b/articles/private-5g-core/index.yml
@@ -60,6 +60,8 @@ landingContent:
             url: create-a-site.md
           - text: Create a site - ARM template
             url: create-site-arm-template.md
+          - text: Modify a site plan
+            url: modify-site-plan.md
           - text: Upgrade a packet core instance - Azure portal
             url: upgrade-packet-core-azure-portal.md
           - text: Upgrade a packet core instance - ARM template
