--- a/articles/private-5g-core/toc.yml
+++ b/articles/private-5g-core/toc.yml
@@ -56,6 +56,8 @@ items:
       href: create-a-site.md
     - name: Create a site - ARM template
       href: create-site-arm-template.md
+    - name: Modify a site plan
+      href: modify-site-plan.md
     - name: Upgrade a packet core instance - Azure portal
       href: upgrade-packet-core-azure-portal.md
     - name: Upgrade a packet core instance - ARM template
