--- a/articles/virtual-machines/deprecated-images.yml
+++ b/articles/virtual-machines/deprecated-images.yml
@@ -22,7 +22,7 @@ sections:
           You might have received an email telling you that your Virtual machine is running on images that are scheduled for deprecation or already deprecated. There are several reasons an image can be deprecated by the publisher, which might be due to security issues or the image reaching end of life. 
 
 
-          ![Screenshot of the email that warns about a image deprecation.](./media/deprecated-images/deprecated-main.png)
+           :::image type="content" source="media/deprecated-images/mail.png" alt-text="Screenshot of the email you might receive if you have virtual machines or scale sets that use an image that is going to be deprecated.":::
            
           
           An image can be deprecated on the version, plan or offer level:
