--- a/articles/virtual-machines/deprecated-images.yml
+++ b/articles/virtual-machines/deprecated-images.yml
@@ -52,16 +52,12 @@ sections:
           You can search for the scheduled or deprecated image in your subscription in the following ways:
           
           
-          If you are notified that an image is deprecated on only the Offer or plan (SKU) level, you can search for all virtual machines from the search bar in the Azure Portal. Edit the columns to include Publisher, Offer, and Plan. This will not give the version information, only up to the Plan information.
+          - If you are notified that an image is deprecated on only the Offer or plan (SKU) level, you can search for all virtual machines from the search bar in the Azure Portal. Edit the columns to include Publisher, Offer, and Plan. This will not give the version information, only up to the Plan information.
            
                         
-          If you are notified that an image is deprecated on the offer, plan (SKU) or version level, you can use Azure Resource Graph Explorer on the Azure portal to find the specific version for images in your subscription that your VM or scale set is running on.
-          
-
-          Run the queries below in the Azure Resource Graph explorer query window and uncomment the optional filters (delete the “//” to uncomment a line) to the Offer, Plan (SKU) or version level you are looking for.
-          
-
-          To find the details of the image versions that are being used by VMs: 
+          - If you are notified that an image is deprecated on the offer, plan (SKU) or version level, you can use Azure Resource Graph Explorer on the Azure portal to find the specific version for images in your subscription that your VM or scale set is running on.
+            Run the queries below in the Azure Resource Graph explorer query window and uncomment the optional filters (delete the “//” to uncomment a line) to the Offer, Plan (SKU) or version level you are looking for.
+            To find the details of the image versions that are being used by VMs: 
           
           ```
           Resources 
