--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -496,6 +496,10 @@
       href: partner-lexisnexis.md
     - name: Onfido
       href: partner-onfido.md
+  - name: Identity verfication tools
+    items:
+    - name: Grit IEF editor 
+      href: partner-grit-ief-editor.md
   - name: Domain name
     items:
     - name: b2clogin.com overview
