Update TOC and remove buy information.

--- a/articles/azure-percept/toc.yml
+++ b/articles/azure-percept/toc.yml
@@ -1,10 +1,13 @@
 - name: Azure Percept documentation
   href: index.yml
 
-- name: Azure Percept DK Overview
+- name: Retirement of Azure Percept DK
   items:
     - name: Retirement of Azure Percept DK
       href: retirement-of-azure-percept-dk.md   
+      
+- name: Azure Percept DK Overview
+  items:
     - name: Azure Percept overview
       href: overview-azure-percept.md   
     - name: Azure Percept Studio overview v1
