--- a/articles/azure-arc/data/toc.yml
+++ b/articles/azure-arc/data/toc.yml
@@ -82,7 +82,7 @@ items:
       items:
         - name: Upload usage data
           href: upload-usage-data.md
-        - name: Monitor with Grafana & Kibana
+        - name: Monitor with Grafana and Kibana
           href: monitor-grafana-kibana.md
         - name: Deploy telemetry router 
           href: deploy-telemetry-router.md
@@ -134,7 +134,7 @@ items:
           href: service-tiers.md
     - name: How-to
       items:
-        - name: Create & connect
+        - name: Create and connect
           items:
             - name: Create with CLI
               href: create-sql-managed-instance.md
@@ -148,7 +148,7 @@ items:
           items:
             - name: Configure
               href: configure-managed-instance.md
-            - name: Monitor, log analytics, & billing information - portal
+            - name: Monitor, log analytics, and billing information - portal
               href: monitoring-log-analytics-azure-portal-managed-instance.md
             - name: Reserved capacity
               href: reserved-capacity-overview.md
@@ -196,7 +196,7 @@ items:
                   href: deploy-active-directory-connector-cli.md
                 - name: Deploy AD connector - portal
                   href: deploy-active-directory-connector-portal.md
-            - name: Deploy & connect sql managed instance
+            - name: Deploy and connect SQL managed instance
               items:
                 - name: Deploy SQL Managed Instance
                   href: deploy-active-directory-sql-managed-instance.md
@@ -244,15 +244,15 @@ items:
       items:
         - name: Manage
           items:
-            - name: Back up & restore
+            - name: Back up and restore
               href: backup-restore-postgresql.md
             - name: Change PostgreSQL port
               href: change-postgresql-port.md
-            - name: Configure & scale
+            - name: Configure and scale
               items:
                 - name: Show configuration
                   href: show-configuration-postgresql-server.md
-                - name: Scale up|down memory & vCores
+                - name: Scale up|down memory and vCores
                   href: scale-up-down-postgresql-server-using-cli.md
             - name: Delete
               href: delete-postgresql-server.md
