--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -16,6 +16,8 @@
       href: whats-new-azure-monitor.md
     - name: FSLogix
       href: /fslogix/whats-new?context=/azure/virtual-desktop/context/context
+    - name: WebSocket
+      href: whats-new-websocket.md
     - name: Remote Desktop clients
       items:
       - name: Windows (Desktop)
@@ -151,6 +153,8 @@
     href: tag-virtual-desktop-resources.md
   - name: Fair Share technologies
     href: /troubleshoot/windows-server/remote/fair-share-enabled-by-default-in-rds?toc=/azure/virtual-desktop/toc.json&bc=/azure/virtual-desktop/breadcrumb/toc.json
+  - name: Supported features for Teams
+    href: teams-supported-features
 - name: How-to guides
   items:
   - name: Migrate your deployment
@@ -365,6 +369,8 @@
     href: /troubleshoot/azure/virtual-desktop/windows-virtual-desktop-blank-screen
   - name: Multimedia redirection (preview)
     href: troubleshoot-multimedia-redirection.md
+  - name: Teams for Azure Virtual Desktop
+    href: troubleshoot-teams.md
 - name: Reference
   items:
   - name: Azure CLI
