--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -496,7 +496,7 @@
       href: partner-lexisnexis.md
     - name: Onfido
       href: partner-onfido.md
-  - name: Identity verfication tools
+  - name: Identity verification tools
     items:
     - name: Grit IEF editor 
       href: partner-grit-ief-editor.md
