--- a/articles/azure-percept/index.yml
+++ b/articles/azure-percept/index.yml
@@ -14,6 +14,14 @@ metadata:
   ms.date: 10/07/2022 
 
 landingContent:
+
+  - title: Retirement of the Azure Percept DK
+    linkLists:
+      - linkListType: overview
+        links:
+          - text: Retirement of Azure Percept DK
+            url: retirement-of-azure-percept-dk.md
+ 
   - title: What is Azure Percept?
     linkLists:
       - linkListType: overview
