--- a/articles/cognitive-services/language-service/breadcrumb/toc.yml
+++ b/articles/cognitive-services/language-service/breadcrumb/toc.yml
@@ -6,6 +6,17 @@
     tocHref: /azure/cognitive-services/
     topicHref: /azure/cognitive-services/index
     items:
-    - name: Azure Cognitive Service for Language
+    - name: Language service
       tocHref: /azure/cognitive-services/language-service/
       topicHref: /azure/cognitive-services/language-service/index
+- name: Azure
+  tocHref: /legal/
+  topicHref: /azure/index
+  items:
+  - name: Cognitive Services                # Original doc set name
+    tocHref: /legal/cognitive-services/language-service    # Destination doc set route
+    topicHref: /azure/cognitive-services/index    # Original doc set route
+    items:
+    - name: Language Service           # Destination doc set name
+      tocHref: /legal/cognitive-services/language-service      # Destination doc set route
+      topicHref: /azure/cognitive-services/speech-service/index    # Original doc set route
