--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -321,6 +321,8 @@
       href: troubleshoot-cross-region-replication.md
     - name: Troubleshoot Resource Provider errors
       href: azure-netapp-files-troubleshoot-resource-provider-errors.md
+- name: Guidelines for configuring ANF over Virtual WAN
+  href: configure-anf-on-vwan.md
 - name: Reference
   items:
   - name: REST
