--- a/articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json
+++ b/articles/applied-ai-services/.openpublishing.redirection.applied-ai-services.json
@@ -110,6 +110,18 @@
             "source_path_from_root": "/articles/applied-ai-services/form-recognizer/how-to-guides/use-prebuilt-read.md",
             "redirect_url": "/azure/applied-ai-services/form-recognizer/how-to-guides/v3-0-sdk-rest-api.md",
             "redirect_document_id": false
+          },
+          {
+            "source_path_from_root": "/articles/applied-ai-services/form-recognizer/quickstarts/get-started-v2-1-sdk-rest-api.md",
+            "redirect_url": "/azure/applied-ai-services/form-recognizer/quickstarts/get-started-sdks-rest-api.md?view=form-recog-2.1.0&preserve-view=true",
+            "redirect_document_id": false
+          },
+          {
+            "source_path_from_root": "/articles/applied-ai-services/form-recognizer/quickstarts/get-started-v3-0-sdk-rest-api.md",
+            "redirect_url": "/azure/applied-ai-services/form-recognizer/quickstarts/get-started-sdks-rest-api.md?view=form-recog-3.0.0&preserve-view=true",
+            "redirect_document_id": false
           }
+
+
     ]
 }
